<resources>
    <string name="app_name">MyWay</string>
    <string name="choose_country">Choose Country</string>
    <string name="egypt">Egypt</string>
    <string name="saudia">Saudia</string>
    <string name="product">Products</string>
    <string name="news">News</string>
    <string name="catalouge">Catalouge</string>
    <string name="cadua">Cadua</string>
    <string name="offers">Offers</string>
    <string name="contact_us">Contact Us</string>
    <string name="work_setting">Work Setting</string>
    <string name="join_my_way_company">Join My Way Company</string>
    <string name="home">Home</string>
    <string name="store">Download</string>
    <string name="contact_manger">Contact Manager</string>
    <string name="read_more">Read More</string>
    <string name="change_country">Change Country</string>
    <string name="about_app">About App</string>
    <string name="our_page_on_facebook">Our Page On Facebook</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="write_your_message_here">Write Your Message Here</string>
    <string name="field_required">Field Required</string>
    <string name="inv_email">Invalid Email</string>
    <string name="wait">Wait</string>
    <string name="suc">Success</string>
    <string name="full_name">Full Name</string>
    <string name="please_write_your_name_4">Please Write Your Name 4</string>
    <string name="phone_number">Phone Number</string>
    <string name="your_phone_number_to_contact_with_you">Your Phone Number To contact With You</string>
    <string name="national_number">National Number</string>
    <string name="write_num_here_contain_14_num">Write Num Here Contain 14 num</string>
    <string name="title_by_detials">Title By Detials</string>
    <string name="dowanload_pdf">Dowanload Pdf</string>
    <string name="show_cataloug">Show Cataloug</string>
    <string name="calculate_your_cadua">Calculate Your Cadua</string>
    <string name="to_calculate_your_rewards_please_enter_the_number_of_your_points_here">To calculate your rewards, please enter the number of your points here</string>
    <string name="please_enter_the_number_of_your_points_here">please enter the number of your points here</string>
    <string name="_20_geneh">Geneh</string>
    <string name="r">ryal</string>
    <string name="more">More</string>

</resources>