<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    >

    <data>

        <variable
            name="backListener"
            type="com.myway.interfaces.Listeners.BackListener" />

        <variable
            name="lang"
            type="String" />


        <!--        <variable-->
        <!--            name="contactListener"-->
        <!--            type="com.creative.share.apps.e_branchdriver.interfaces.Listeners.ContactListener" />-->
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities_fragments.activity_choose_order_type.ChooseOrderTypeActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:background="@color/toolbar"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->backListener.back()}"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:clickable="false"
                    android:longClickable="false"
                    android:padding="8dp"
                    android:rotation='@{lang.equals("en")?180:0}'
                    android:src="@drawable/ic_right_arrow"
                    android:tint="@color/white" />

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:clickable="false"
                    android:longClickable="false"
                    android:text="@string/calculate_your_cadua"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:fitsSystemWindows="true"
            app:layout_constraintBottom_toTopOf="@+id/fr"
            app:layout_constraintTop_toBottomOf="@id/toolbar"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp"

                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="5dp"
                    android:clickable="false"
                    android:gravity="center_vertical"
                    android:longClickable="false"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/to_calculate_your_rewards_please_enter_the_number_of_your_points_here"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/edtcadua"
                    android:layout_width="180dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="90dp"
                    android:background="@color/transparent"
                    android:hint="@string/please_enter_the_number_of_your_points_here"
                    android:inputType="number"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray4"
                    android:textSize="15sp" />

                <View
                    android:layout_width="180dp"
                    android:layout_height="2px"
                    android:layout_gravity="center"
                    android:background="@color/gray15" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="5dp"
                    android:clickable="false"
                    android:gravity="center_vertical"
                    android:longClickable="false"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/_20_geneh"
                    android:textColor="@color/toolbar"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
