<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    >

    <data>
        <variable
            name="backListener"
            type="com.myway.interfaces.Listeners.BackListener" />
        <variable
            name="lang"
            type="String" />


        <variable
            name="contactUs"
            type="com.myway.models.ContactUsModel" />

<!--        <variable-->
<!--            name="contactListener"-->
<!--            type="com.creative.share.apps.e_branchdriver.interfaces.Listeners.ContactListener" />-->
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities_fragments.activity_choose_order_type.ChooseOrderTypeActivity"
        android:background="@color/gray0"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="56dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/toolbar"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:onClick="@{()->backListener.back()}"
                >
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_right_arrow"
                    android:tint="@color/white"
                    android:padding="8dp"
                    android:clickable="false"
                    android:longClickable="false"
                    android:rotation='@{lang.equals("en")?180:0}'
                    />
                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:textColor="@color/white"
                    android:clickable="false"
                    android:longClickable="false"
                    android:textSize="16sp"
                    android:text="@string/contact_manger"
                    />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toTopOf="@+id/fr"
            android:fitsSystemWindows="true"
            android:fillViewport="true"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp"

                >

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="3dp"
                    app:cardBackgroundColor="@color/white"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"

                    >
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:counterEnabled="false"
                        app:errorEnabled="false"
                        app:helperTextEnabled="false"
                        app:startIconDrawable="@drawable/ic_user"
                        app:hintAnimationEnabled="false"
                        app:hintEnabled="false"
                        app:hintTextColor="@color/black"
                        android:background="@color/transparent"

                        >
                        <EditText
                            android:id="@+id/edtName"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:background="@color/transparent"
                            android:singleLine="true"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:textColorHint="@color/gray4"
                            android:textColor="@color/black"
                            android:hint="@string/name"
                            android:textSize="15sp"
                            android:text="@={contactUs.name}"
                            error="@{contactUs.error_name}"


                            />

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="3dp"
                    app:cardBackgroundColor="@color/white"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"

                    >
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:counterEnabled="false"
                        app:errorEnabled="false"
                        app:helperTextEnabled="false"
                        app:hintAnimationEnabled="false"
                        app:hintEnabled="false"
                        app:hintTextColor="@color/black"
                        app:startIconDrawable="@drawable/ic_email"

                        >
                        <EditText
                            android:id="@+id/edtEmail"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:background="@color/transparent"
                            android:singleLine="true"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:textColorHint="@color/gray4"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:text="@={contactUs.email}"
                            error="@{contactUs.error_email}"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="3dp"
                    app:cardBackgroundColor="@color/white"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"

                    >
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:counterEnabled="false"
                        app:errorEnabled="false"
                        app:helperTextEnabled="false"
                        app:startIconDrawable="@drawable/ic_comment"
                        app:hintAnimationEnabled="false"
                        app:hintEnabled="false"
                        app:hintTextColor="@color/black"

                        >
                        <EditText
                            android:id="@+id/edtSubject"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:background="@color/transparent"
                            android:singleLine="true"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:textColorHint="@color/gray4"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:hint="@string/subject"
                            android:text="@={contactUs.subject}"
                            error="@{contactUs.error_subject}"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="3dp"
                    app:cardBackgroundColor="@color/white"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"

                    >

                    <EditText
                        android:id="@+id/edtMessage"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:background="@color/transparent"
                        android:singleLine="true"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:textColorHint="@color/gray4"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:hint="@string/write_your_message_here"
                        android:gravity="top|start"
                        android:padding="10dp"
                        android:inputType="textMultiLine"
                        android:text="@={contactUs.message}"
                        error="@{contactUs.error_message}"
                        />

                </androidx.cardview.widget.CardView>



            </LinearLayout>

        </ScrollView>
        <FrameLayout
            android:id="@+id/fr"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/toolbar"

            >
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="20dp"
                android:layout_gravity="center"
                >


            <Button
                android:id="@+id/btnSend"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:background="@color/white"
                android:textSize="15sp"
                android:text="@string/send"
                android:gravity="center"/>

            </androidx.cardview.widget.CardView>

        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
