<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    >


        <data>
            <variable
                name="backListener"
                type="com.myway.interfaces.Listeners.BackListener" />
            <variable
                name="action"
                type="com.myway.interfaces.Listeners.SettingActions" />
            <variable
                name="lang"
                type="String" />




        </data>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:fillViewport="true"
            android:background="@color/white"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                >




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal"
                    android:weightSum="1"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:onClick="@{()->action.contactUs()}"

                    >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:clickable="false"
                        android:longClickable="false"
                        android:text="@string/contact_manger"
                        />
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_right_arrow"
                        android:tint="@color/black"
                        android:clickable="false"
                        android:longClickable="false"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:rotation='@{lang.equals("ar")?180:0}'

                        />
                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1px"
                    android:background="@color/gray4"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal"
                    android:weightSum="1"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:onClick="@{()->action.joinMyway()}"

                    >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:clickable="false"
                        android:longClickable="false"
                        android:text="@string/join_my_way_company"
                        />
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_right_arrow"
                        android:tint="@color/black"
                        android:clickable="false"
                        android:longClickable="false"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:rotation='@{lang.equals("ar")?180:0}'

                        />
                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1px"
                    android:background="@color/gray4"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal"
                    android:weightSum="1"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:onClick="@{()->action.changecountry()}"

                    >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:clickable="false"
                        android:longClickable="false"
                        android:text="@string/change_country"
                        />
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_right_arrow"
                        android:tint="@color/black"
                        android:clickable="false"
                        android:longClickable="false"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:rotation='@{lang.equals("ar")?180:0}'
                        />
                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1px"
                    android:background="@color/gray4"/>




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal"
                    android:weightSum="1"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:onClick="@{()->action.aboutApp()}"


                    >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:clickable="false"
                        android:longClickable="false"
                        android:text="@string/about_app"
                        />
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_right_arrow"
                        android:tint="@color/black"
                        android:clickable="false"
                        android:longClickable="false"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:rotation='@{lang.equals("ar")?180:0}'

                        />
                </LinearLayout>


                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1px"
                    android:background="@color/gray4"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal"
                    android:weightSum="1"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:onClick="@{()->action.ourpage()}"


                    >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:clickable="false"
                        android:longClickable="false"
                        android:text="@string/our_page_on_facebook"
                        />
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_right_arrow"
                        android:tint="@color/black"
                        android:clickable="false"
                        android:longClickable="false"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:rotation='@{lang.equals("ar")?180:0}'

                        />
                </LinearLayout>


                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1px"
                    android:background="@color/gray4"/>



            </LinearLayout>
        </ScrollView>


    </layout>

